[gd_scene load_steps=3 format=3 uid="uid://7qkoiudxf7n2"]

[ext_resource type="Script" path="res://pause_menu/scripts/Inputs/input_binding_button.gd" id="1_baml0"]
[ext_resource type="PackedScene" uid="uid://d1o6fct8erxuy" path="res://pause_menu/button_prompt.tscn" id="2_7yoee"]

[node name="Button" type="Button"]
custom_minimum_size = Vector2(400, 200)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_baml0")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 3

[node name="ActionName" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "Right"
vertical_alignment = 1

[node name="ButtonPrompt" parent="MarginContainer" instance=ExtResource("2_7yoee")]
layout_mode = 2
horizontal_alignment = 2

[connection signal="button_up" from="." to="." method="startRebind"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
